# vancomyzer_website

./: .dockerignore  .env.example  .gitignore  .render.yaml  AGENTS.md  API_DISCOVERY_SUMMARY.md  Makefile  README.md  backend_test.py  dev.sh  eslint.config.js  index.html  package-lock.json  package.json  render.yaml  requirements.txt  run.sh  tailwind.config.ts  test_interactive_auc.py  test_result.md  vite.config.ts
backend/: .env.example  Dockerfile  README.md  api_loading_dose.py  app.py  bayes.py  dosing_spreadsheet.py  example_payload.json  main.py  models.py  pk.py  pyproject.toml  regimen_recommender.py  requirements.txt  run.sh  schemas.py  server.py  test_pk_ss.py
backend/basic/: __init__.py  calculator.py  excel_engine.py
backend/pk/: README.md  __init__.py  bayes_demo.py  bayesian.py  deterministic.py  model.py  optimize.py  sim.py
backend/pk_bayes/: __init__.py  covariates.py  map_fit.py  model_registry.py  posterior_predictive.py  random_effects.py  regimen_opt.py  residual_error.py
backend/pk_bayes/models/: __init__.py  two_comp_iv.py
backend/pk_bayes/priors/: vancomycin_2comp_placeholder.json
backend/routers/: __init__.py
backend/static/: index.html
backend/static/assets/: About-BZz2Mo1O.js  About-C3KmcIIr.js  Disclaimer-BPooWB6M.js  Disclaimer-UvHI2jP3.js  References-1lAHQuw6.js  References-IXglHzXA.js  index-0vQ1HGtb.css  (+3 more)
backend/tests/: test_basic_calculator.py  test_bayesian_map.py  test_bayesian_map_fit.py  test_deterministic_consistency.py  test_endpoint.py  test_pk_bayes.py  test_pk_math.py
backend/utils/: __init__.py  pk.py
(+219 files in other folders)
