[build-system]
requires = ["setuptools>=58", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vancomyzer-backend"
version = "0.1.0"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "numpy",
  "scipy",
  "pymc>=5",
  "pandas",
  "pydantic",
  "orjson",
  "pytensor>=2.20.0",
]
